// Copyright 2024, Raccoons. Developing simple way to change.
//
// @license MIT

syntax = "proto3";

option java_package = "co.raccoons.protoc";
option java_outer_classname = "OptionsProto";
option java_multiple_files = true;

import "google/protobuf/descriptor.proto";

extend google.protobuf.MessageOptions {
  optional ExtraMessageOption extra = 77038;
}

message ExtraMessageOption {
  string message_implements = 1;
}

extend google.protobuf.FieldOptions {
  bool required = 77138;
}